@@ -1,5 +1,5 @@
 /*
- *    Copyright 2009-2022 the original author or authors.
+ *    Copyright 2009-2024 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -15,7 +15,8 @@
  */
 package org.apache.ibatis.submitted.foreach;
 
-import static com.googlecode.catchexception.apis.BDDCatchException.*;
+import static com.googlecode.catchexception.apis.BDDCatchException.caughtException;
+import static com.googlecode.catchexception.apis.BDDCatchException.when;
 import static org.assertj.core.api.BDDAssertions.then;
 
 import java.io.IOException;
@@ -23,7 +24,6 @@ import java.io.Reader;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import org.apache.ibatis.BaseDataTest;
@@ -49,7 +49,7 @@ class ForEachTest {
 
     // populate in-memory database
     BaseDataTest.runScript(sqlSessionFactory.getConfiguration().getEnvironment().getDataSource(),
-            "org/apache/ibatis/submitted/foreach/CreateDB.sql");
+        "org/apache/ibatis/submitted/foreach/CreateDB.sql");
   }
 
   @Test
@@ -117,9 +117,9 @@ class ForEachTest {
   void shouldReportMissingPropertyName() {
     try (SqlSession sqlSession = sqlSessionFactory.openSession()) {
       Mapper mapper = sqlSession.getMapper(Mapper.class);
-      when(() -> mapper.typoInItemProperty(Collections.singletonList(new User())));
-      then(caughtException()).isInstanceOf(PersistenceException.class)
-        .hasMessageContaining("There is no getter for property named 'idd' in 'class org.apache.ibatis.submitted.foreach.User'");
+      when(() -> mapper.typoInItemProperty(List.of(new User())));
+      then(caughtException()).isInstanceOf(PersistenceException.class).hasMessageContaining(
+          "There is no getter for property named 'idd' in 'class org.apache.ibatis.submitted.foreach.User'");
     }
   }
 
@@ -148,7 +148,7 @@ class ForEachTest {
       sqlSessionFactory = new SqlSessionFactoryBuilder().build(reader);
     }
     BaseDataTest.runScript(sqlSessionFactory.getConfiguration().getEnvironment().getDataSource(),
-      "org/apache/ibatis/submitted/foreach/CreateDB.sql");
+        "org/apache/ibatis/submitted/foreach/CreateDB.sql");
 
     try (SqlSession sqlSession = sqlSessionFactory.openSession()) {
       Mapper mapper = sqlSession.getMapper(Mapper.class);
